--- a/homepage.html
+++ b/homepage.html
@@ -20,10 +20,10 @@
 	
 	<body>
 		
-		<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+		<nav class="navbar navbar-light" style="background-color: #e3f2fd">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"> 
-		<img alt="logo" src="images/logo.png" height="100"></a>
+		<img alt="logo" src="images/logo.png" height="75"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,9 +46,34 @@
   </div>
 </nav>
 		
+		<br><br>
+		
+		<header>
+	  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+	  <h1 class="display-4"> A podcast </h1>
+    <p class="lead"> where we encourage you to embrace your own beautystandards </p>
+	  <img alt="logo" src="images/logo.png">
+    
+  </div>
+</div>
+	  </header>
+		
+		<br><br>
+		
+		<footer>
+		  <div >
+  <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beautystandards</p>
+			  </div>
+</footer>
+	
+		
+		
+	  
 	
 	
-	
+
 	
 	
 	
