--- a/vision.html
+++ b/vision.html
@@ -1,10 +1,68 @@
 <!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Naamloos document</title>
-</head>
+<html lang="en">
+  <head>
+	  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<body>
-</body>
+ <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/style.css.txt.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+
+	  <!-- jQuery first (Popper is included in the Bootstrap JS) then Bootstrap JS -->
+  <script src="js/jquery-3.6.0.slim.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+</head>
+	
+	<head>
+    <title>Beyond Pure Vision</title>
+  </head>
+	
+	<body>
+		
+		<nav class="navbar navbar-light" style="background-color: #e3f2fd">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"> 
+		<img alt="logo" src="images/logo.png" height="75"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"> Vision </a>
+        </li>
+		  <li class="nav-item">
+          <a class="nav-link" href="#"> Values </a>
+        </li>
+		  <li class="nav-item">
+          <a class="nav-link" href="#">Community</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+		
+		<br>
+		
+		<header> In a world where women are pressured to meet unrealistic
+beauty standards, we believe that change is the key to
+eliminate these standards, because only then we allowourselves to be the true beauty within
+ourselves.”
+	  </header>
+		
+		<br><br>
+	
+		<footer>
+		  <div >
+  <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beautystandards</p>
+			  </div>
+</footer>
+	
+		
+	</body>
 </html>
