--- a/values.html
+++ b/values.html
@@ -3,6 +3,15 @@
 <html lang="en"> 
 
   <head> 
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQD35YFHVN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KQD35YFHVN');
+</script>
 
   <meta charset="utf-8"> 
 
