--- a/homepage.html
+++ b/homepage.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- home page must be index - if not the website will never work on a server - github is not a server so here no problem - you need to change it -->
 <html lang="en">
   <head>
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
