--- a/homepage.html
+++ b/homepage.html
@@ -30,6 +30,9 @@
 	
 	<body>
 		
+		
+		
+		
 		<nav class="navbar navbar-light" style="background-color: #e3f2fd">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"> 
@@ -56,6 +59,7 @@
   </div>
 </nav>
 		
+		
 		<br>
 		
 		<header>
@@ -71,13 +75,12 @@
 		
 		<br><br>
 		
-		
-		<footer>
-		  <div >
-  <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
- A podcast where we encourage you to embrace your own beautystandards</p>
-			  </div>
-</footer>
+		 <div class="wrapper">
+	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beautystandards
+			 
+			 </footer>
+</div>
 	
 		
 		
