--- a/values.html
+++ b/values.html
@@ -50,53 +50,29 @@
 <body> 
 	 
 <nav class="navbar navbar-light" style="background-color: #e3f2fd"> 
-
   <div class="container-fluid"> 
-
     <a class="navbar-brand" href="index.html">  
-
 <img alt="logo" src="images/logo.png" height="75"></a> 
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
-
       <span class="navbar-toggler-icon"></span> 
-
     </button> 
-
     <div class="collapse navbar-collapse" id="navbarNav"> 
-
       <ul class="navbar-nav"> 
-
         <li class="nav-item"> 
-
           <a class="nav-link active" aria-current="page" href="#">Home</a> 
-
         </li> 
-
         <li class="nav-item"> 
-
           <a class="nav-link" href="#"> Vision </a> 
-
         </li> 
-
   <li class="nav-item"> 
-
           <a class="nav-link" href="#"> Values </a> 
-
         </li> 
-
   <li class="nav-item"> 
-
           <a class="nav-link" href="#">Community</a> 
-
         </li> 
-
       </ul> 
-
     </div> 
-
   </div> 
-
 </nav> 
 
  
@@ -106,9 +82,13 @@
  
 
 <header> 
+	
 	<div class="my-container"> 
-
-  <div class="row row-cols-2"> 
+		
+		<div class="row">
+			
+  <div class="col-sm-4"> 
+	  
   <div class="col"> Respect: Respect for yourself, is respect for someone else. </div> 
 
     <div class="col"> Self-Esteem: Seeing the beauty in ourselves will boost-esteem. </div> 
@@ -118,7 +98,7 @@
     <div class="col"> Positive Outlook: Turn the negativity into positivity. </div> 
 
   </div> 
-
+</div>
 </div> 
   </header> 
 
