--- a/values.html
+++ b/values.html
@@ -82,23 +82,22 @@
  
 
 <header> 
-	
 	<div class="my-container"> 
-		
-		<div class="row">
-			
-  <div class="col-sm-4"> 
+
+  <div class="row row-cols-sm-4"> 
+	
+  <div class="col"> <h5> Respect: </h5> Respect for yourself, is respect for someone else. </div> 
 	  
-  <div class="col"> Respect: Respect for yourself, is respect for someone else. </div> 
+	  
+    <div class="col"> <h5> Self-Esteem: </h5> Seeing the beauty in ourselves will boost-esteem. </div> 
+	  
 
-    <div class="col"> Self-Esteem: Seeing the beauty in ourselves will boost-esteem. </div> 
+    <div class="col"> <h5> Authenticity:</h5> Everyone is unique, therefore authentic. </div> 
 
-    <div class="col"> Authenticity: Everyone is unique, therefore authentic. </div> 
-
-    <div class="col"> Positive Outlook: Turn the negativity into positivity. </div> 
+    <div class="col"> <h5>Positive Outlook: </h5> Turn the negativity into positivity. </div> 
 
   </div> 
-</div>
+
 </div> 
   </header> 
 
@@ -106,7 +105,6 @@
 
 <br><br> 
 
- 
 
 <footer> 
 
@@ -122,10 +120,3 @@
 
  
 
- 
-
-</body> 
-
-</html> 
-
- 
