--- a/values.html
+++ b/values.html
@@ -110,13 +110,12 @@
 
   <div > 
 
-  <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br> 
-
- A podcast where we encourage you to embrace your own beautystandards</p> 
-
-  </div> 
-
-</footer> 
+  <div class="wrapper">
+	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beautystandards
+			 
+			 </footer>
+</div>
 
  
 
