--- a/homepage.html
+++ b/homepage.html
@@ -65,7 +65,7 @@
 		<header>
 	  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-	  <h1 class="display-4"> A podcast</h1>
+	  <h1 class="one"> A podcast</h1>
 <p class="lead"> where we encourage you to embrace your own beautystandards </p>
 	  <img alt="logo" src="images/logo.png">
     
