--- a/values.html
+++ b/values.html
@@ -78,6 +78,8 @@
  
 
 <br> 
+	
+	
 
  
 
@@ -86,15 +88,16 @@
 
   <div class="row row-cols-sm-4"> 
 	
-  <div class="col"> <h5> Respect: </h5> Respect for yourself, is respect for someone else. </div> 
+  <div class="col"> <br><br> <h5> Respect: </h5> Respect for yourself, is respect for someone else. </div> 
 	  
 	  
-    <div class="col"> <h5> Self-Esteem: </h5> Seeing the beauty in ourselves will boost-esteem. </div> 
+    <div class="col"> <br><br><h5> Self-Esteem: </h5> Seeing the beauty in ourselves will boost-esteem. </div> 
 	  
 
-    <div class="col"> <h5> Authenticity:</h5> Everyone is unique, therefore authentic. </div> 
+    <div class="col"> <br><br><h5> Authenticity:</h5>
+       Everyone is unique, therefore&nbsp; authentic.</div> 
 
-    <div class="col"> <h5>Positive Outlook: </h5> Turn the negativity into positivity. </div> 
+    <div class="col"> <br><br><h5>Positive Outlook: </h5> Turn the negativity into positivity. </div> 
 
   </div> 
 
