--- a/homepage.html
+++ b/homepage.html
@@ -67,7 +67,7 @@
 	  <div class="jumbotron jumbotron-fluid">
   <div class="container">
 	  <h1 class="one"> A podcast</h1>
-<p class="lead"> where we encourage you to embrace your own beautystandards </p>
+<p class="lead"> where we encourage you to embrace your own beautystand </p>
 	  <img alt="logo" src="images/logo.png">
     
   </div>
