--- a/values.html
+++ b/values.html
@@ -88,16 +88,15 @@
 
   <div class="row row-cols-sm-4"> 
 	
-  <div class="col"> <br><br> <h5> Respect: </h5> Respect for yourself, is respect for someone else. </div> 
+  <div class="col"> <br><br> <img class="values" src="images/respect.png" alt="Pink Tanktop"> </div> 
 	  
 	  
-    <div class="col"> <br><br><h5> Self-Esteem: </h5> Seeing the beauty in ourselves will boost-esteem. </div> 
+    <div class="col"> <br><br><img class="values" src="images/respect2.png" alt="Pink Tanktop"></div> 
 	  
 
-    <div class="col"> <br><br><h5> Authenticity:</h5>
-       Everyone is unique, therefore&nbsp; authentic.</div> 
+    <div class="col"> <br><br><img class="values" src="images/1.png" alt="Pink Tanktop"></div> 
 
-    <div class="col"> <br><br><h5>Positive Outlook: </h5> Turn the negativity into positivity. </div> 
+    <div class="col"> <br><br><img class="values" src="images/1.png" alt="Pink Tanktop"> </div> 
 
   </div> 
 
