--- a/values.html
+++ b/values.html
@@ -48,6 +48,8 @@
  
 
 <body> 
+	<div class= "valuepage">
+		<div class="bg"></div>
 	 
 <nav class="navbar navbar-light" style="background-color: #e3f2fd"> 
   <div class="container-fluid"> 
@@ -88,15 +90,15 @@
 
   <div class="row row-cols-sm-4"> 
 	
-  <div class="col"> <br><br> <img class="values" src="images/respect.png" alt="Pink Tanktop"> </div> 
+  <div class="col"> <br><br> <img class="values" src="images/authenticity.png" alt="authenticity"> </div> 
 	  
 	  
-    <div class="col"> <br><br><img class="values" src="images/respect2.png" alt="Pink Tanktop"></div> 
+    <div class="col"> <br><br><img class="values" src="images/selfesteem.png" alt="self-esteem"></div> 
 	  
 
-    <div class="col"> <br><br><img class="values" src="images/1.png" alt="Pink Tanktop"></div> 
+    <div> <br><br><img class="values" src="images/positiveoutlook.png" alt="positive outlook"></div> 
 
-    <div class="col"> <br><br><img class="values" src="images/1.png" alt="Pink Tanktop"> </div> 
+    <div class="col"> <br><br><img class="values" src="images/respect .png" alt="Pink Tanktop"> </div> 
 
   </div> 
 
@@ -111,4 +113,5 @@
  A podcast where we encourage you to embrace your own beautystandards
 			 
 			 </footer>
-</div>
+		</div>
+	</div>
