--- a/homepage.html
+++ b/homepage.html
@@ -61,20 +61,20 @@
 </nav>
 		
 		
-		<br>
+		<br><br><br>
 		
 		<header>
 	  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-	  <h1 class="one"> A podcast</h1>
-<p class="lead"> where we encourage you to embrace your own beautystand </p>
-	  <img alt="logo" src="images/logo.png">
-    
+	  <img src="images/logo.png" alt="logo" id="logo">
+	  <br><br>
+      <h1 class="one"> A podcast</h1>
+<p class="lead"> where we encourage you to embrace your own beautystandard </p><br>
   </div>
 </div>
 	  </header>
 		
-		<br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
 		 <div class="wrapper">
 	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
