--- a/homepage.html
+++ b/homepage.html
@@ -61,13 +61,12 @@
 </nav>
 		
 		
-		<br><br><br>
+		<br>
 		
 		<header>
 	  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-	  <img src="images/logo.png" alt="logo" id="logo">
-	  <br><br>
+	  <img src="images/logo.png" alt="logo" id="logo"> <br><br>
       <h1 class="one"> A podcast</h1>
 <p class="lead"> where we encourage you to embrace your own beautystandard </p><br>
   </div>
