--- a/values.html
+++ b/values.html
@@ -98,7 +98,7 @@
 
     <div> <br><br><img class="values" src="images/positiveoutlook.png" alt="positive outlook"></div> 
 
-    <div class="col"> <br><br><img class="values" src="images/resepct.png" alt="Pink Tanktop"> </div> 
+    <div class="col"> <br><br><img class="values" src="images/resepct.png" alt="resepct"> </div> 
 
   </div> 
 
