--- a/vision.html
+++ b/vision.html
@@ -29,6 +29,7 @@
   </head>
 	
 	<body>
+		<div class="visionpage"> 
 		
 		<nav class="navbar navbar-light" style="background-color: #e3f2fd">
   <div class="container-fluid">
@@ -56,13 +57,14 @@
   </div>
 </nav>
 		
-		<br>
+		<br><br><br><br><br>
 		
-		<header> In a world where women are pressured to meet unrealistic
-beauty standards, we believe that change is the key to
-eliminate these standards, because only then we allowourselves to be the true beauty within
-ourselves.”
-		</header>
+		
+		<header class="visiontext"><strong> "In a world where women are pressured to meet unrealistic
+		  beauty standards, we believe that change is the key to
+		  eliminate these standards, because only then we allowourselves to be the true beauty within
+		  ourselves.” </strong></header>
+		<br><br><br><br><br><br><br><br>
 		
 		<br><br>
 	
@@ -73,6 +75,6 @@ ourselves.”
 			  </div>
 </footer>
 	
-		
+		</div>
 	</body>
 </html>
