--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
   </head>
 	
 	<body>
-	 <div class= "homepage">
+    <div class= "homepage">
 		
 		
 		
@@ -66,9 +66,9 @@
 		<header>
 	  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-	  <img src="images/logo.png" alt="logo" id="logo"> <br><br>
-      <h1 class="one"> A podcast</h1>
-<p class="lead"> where we encourage you to embrace your own beautystandard </p><br>
+	    <h1 class="one"> A podcast</h1>
+<p class="lead"> where we encourage you to embrace your own beautystandard </p>
+	  <img src="images/logo.png" alt="logo" id="logo"> 
   </div>
 </div>
 	  </header>
