--- a/justification.html
+++ b/justification.html
@@ -48,7 +48,7 @@
 		<header>
 			<p>Justification</p> 
 		</header>
-		
+		<p> When designing the layout of our website we kept the words elegance and simplicity at the top of our minds. The layout design of the website is quite simple and userer friendly. The user can easily navigate their way through the website by clicking on the navigation bar and selecting which page they'd like to view. We incorporated nude colors throughout the entire site because those were the original colors used in the brandroadmap. In the footer of the website we've included the contact information and the social media platforms where you can find more content and information about Beyond Pure. </p>
 		<p>Font names: 'DM Sans', sans-serif, 'Share Tech Mono', monospace</p>
 		<p>Color codes: Black, Grey </p>
 	
