--- a/community.html
+++ b/community.html
@@ -55,10 +55,18 @@
 </nav>
 
 		<header>
-			<p>VISION</p> 
+			<p>Join our community!</p> 
 		</header>
 		
-		<p>Join our community!</p>
+		<p>Our mission is to connect with women and help them gain self-esteem and power. 
+		<br>We believe that these goals can be achieved by creating a community where people can share their experience and show others how easy it is to surround themselves with positivity.
+		<br>
+		<br><h1>Join us on our mission and start your journey today.</h1>
+		<br>
+		<br><h2>Not convinced yet? Read some of our member's journey.</h2>
+		<br>Ann: "Beyond Pure helped me find myself. I am thankful for what I have learned with them and I will help spread the message around. I finally believe in myself."
+		<br>
+		<br>Janie: "Being a woman in her early 20s is so hard. I was so lost before I joined Beyond Pure. Thanks to the podcast I started to see the issues in today's world that are imposed on young women. It made me seek more knowledge and from there I met lots of people. I consider them my family now."</p>
 	
 		
 	</body>
