--- a/homepage.html
+++ b/homepage.html
@@ -68,7 +68,7 @@
   <div class="container">
 	  
 	    <h1 class="one"> A podcast</h1>
-<p class="lead"> where we encourage you to embrace your own beautystandard </p>
+<p class="lead"> where we encourage you to embrace your own beauty standard </p>
 	  <img src="images/logo.png" alt="logo" id="logo"> 
   </div>
 </div>
@@ -78,7 +78,7 @@
 		
 		 <div class="wrapper">
 	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
- A podcast where we encourage you to embrace your own beautystandards
+ A podcast where we encourage you to embrace your own beauty standards.
 			 
 			 </footer>
 </div>
