--- a/values.html
+++ b/values.html
@@ -110,7 +110,7 @@
 		
 		 <div class="wrapper">
 	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
- A podcast where we encourage you to embrace your own beautystandards
+ A podcast where we encourage you to embrace your own beauty standards.
 			 
 			 </footer>
 		</div>
