--- a/vision.html
+++ b/vision.html
@@ -71,7 +71,7 @@
 		<footer>
 		  <div >
   <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
- A podcast where we encourage you to embrace your own beautystandards</p>
+ A podcast where we encourage you to embrace your own beauty standards.</p>
 			  </div>
 </footer>
 	
