--- a/community.html
+++ b/community.html
@@ -78,7 +78,7 @@
      
     </div>
     <div class="col" id="coldiversity"> <br>
-      <img src="images/community.png " alt="diversity" id="diverssity"> <br>
+      <img src="images/community.png " alt="diversity" id="diverssity"> <br><br>
     </div>
   </div>
 </div>
