--- a/homepage.html
+++ b/homepage.html
@@ -65,7 +65,7 @@
 		
 		<header>
 	  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+  <div class="container" id= "homepagetext">
 	  
 	    <h1 class="one"> A podcast</h1>
 <p class="lead"> where we encourage you to embrace your own beauty standard </p>
