--- a/community.html
+++ b/community.html
@@ -109,7 +109,13 @@
     </div>
   </div>
   
- 
+  <div class="wrapper">
+	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beauty standards.
+			 
+			 </footer>
+</div>
+	
 
 </body>
 </html>
