--- a/vision.html
+++ b/vision.html
@@ -57,22 +57,30 @@
   </div>
 </nav>
 		
-		<br><br><br><br><br>
+		<br><br><br><br><br><br>
 		
-		
-		<header class="visiontext"><strong> "In a world where women are pressured to meet unrealistic
-		  beauty standards, we believe that change is the key to
-		  eliminate these standards, because only then we allowourselves to be the true beauty within
-		  ourselves.” </strong></header>
-		<br><br><br><br><br><br><br><br>
+		<div class="jumbotron jumbotron-fluid">	
+			<div class="container" id="visiontext">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-6"><strong> "In a world where women are pressured to meet unrealistic beauty standards, we believe that change is the key to eliminate these standards, because only then we allowourselves to be the true beauty within ourselves.”</strong></div>
+<div class="col">
+</div>
+  </div>
+</div>
+			
+			<br><br><br><br><br>
 		
 		<br><br>
 	
 		<footer>
 		  <div >
+			  
+			  
   <p class="footer"> Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
  A podcast where we encourage you to embrace your own beauty standards.</p>
-			  </div>
+		  </div>
 </footer>
 	
 		</div>
