--- a/justification.html
+++ b/justification.html
@@ -67,10 +67,10 @@
 			<div class="jumbotron jumbotron2" id="justificationtxt"><br><br>
 				<div class="jumbotron-3">
 				<div class="row">
-    <div class="col" id="col4">
-      <strong> User testing report </strong> </div>
+    <div class="col" >
+      <strong>  </strong> </div>
 					
-    <div class="col-5">
+    <div class="col-4" id= "col-4">Using testing report
     </div>
     <div class="col" id="col5">
       <strong> Number of Test Users: 3 testers <br>
@@ -118,13 +118,26 @@ Type: paper prototype </strong> </div>
 	</div>
 </div>
 
+<div class="jumbotron jumbotron-4">
+  <div class="container" id="grid">
+	  <div class="row">
+  <div class="column3">
+    <img id= "photo"src="images/paperprototype community.jpeg">
+    <img id= "photo"src="images/paperprototype find us at.jpeg"> 
+    <img id= "photo"src="images/paperprototype homepage.jpeg">
+    <img id= "photo"src="images/paperprototype values.jpeg">
+    <img id= "photo"src="images/paperprototype vision.jpeg">
+    <img id= "photo"src="images/paperprototype who are we.jpeg">
+   
+		  </div></div></div><br><br>
+		  <div class="wrapper">
+	     <footer class="footer">Contact: info@beyondpure.com - Instagram: @BeyondPure - TikTok: @BeyondPure   <br>
+ A podcast where we encourage you to embrace your own beauty standards.
+			 
+			 </footer>
+</div>
+
 
 			
-			<img src="images/paperprototype homepage.jpeg" alt= "flow diagram" width="500" height="600">
-			<img src="images/paperprototype who are we.jpeg" alt= "flow diagram" width="500" height="600">
-			<img src="images/paperprototype vision.jpeg" alt= "flow diagram" width="500" height="600">
-			<img src="images/paperprototype values.jpeg" alt= "flow diagram" width="500" height="600">
-			<img src="images/paperprototype community.jpeg" alt= "flow diagram" width="500" height="600">
-			<img src="images/paperprototype find us at.jpeg" alt= "flow diagram" width="500" height="600">
 	</body>
 </html>
