--- a/find us.html
+++ b/find us.html
@@ -28,7 +28,7 @@
     <title>Beyond Pure Vision</title>
   </head>
 	<body>
-    <div class= "find-us">
+    <div class= "find-uspage">
 		
 		
 		
@@ -60,10 +60,34 @@
 </nav>
 		<br>
 		
+		
 		 <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+  <div class="container-row">
+	  
+	  <br> <br> <br> <br>
+	
+	<div class="container-5"> 
+
+  <div class="row row-cols-sm-4"> 
+	
+  <div class="col7"> <br><br> <img class="Spotify" src="images/spotify.png" alt="Spotify"> </div> 
 	  
 	  
+    <div class="col8"> <br><br><img class="Youtube" src="images/youtube.png" alt="Youtube"></div> 
+	  
+
+    <div class= "col9"> <br><br><img class="Instagram" src="images/instagram.png" alt="Instagram"></div> 
+
+    <div class="col10"> <br><br><img class="TikTok" src="images/tiktok.png" alt="Tiktok"> </div> 
+
+		</div> </div>
+<br><br><br><br> <br> <br>
+	</div> </div></div>
+
+
+
+	<br><br>
+		
 	  
 	  
 	  
