--- a/find us.html
+++ b/find us.html
@@ -64,7 +64,7 @@
 		 <div class="jumbotron jumbotron-fluid">
   <div class="container-row">
 	  
-	  <br> <br> <br> <br>
+	  <br> <br> 
 	
 	<div class="container-5"> 
 
@@ -78,22 +78,18 @@
 
     <div class= "col9"> <br><br><img class="Instagram" src="images/instagram.png" alt="Instagram"></div> 
 
-    <div class="col10"> <br><br><img class="TikTok" src="images/tiktok.png" alt="Tiktok"> </div> 
+    <div class="col10"> <br><br><img class="TikTok" src="images/tiktok.png" alt="Tiktok"> </div> <br><br>
 
-		</div> </div>
-<br><br><br><br> <br> <br>
-	</div> </div></div>
-
-
-
-	<br><br>
-		
+		</div></div> <br>
 	  
+	  <div class="row" id="socials">
+  <div class="col"><strong>Beyond Pure</strong></div>
+  <div class="col"><strong>Beyond Pure</strong></div>
+  <div class="col"><strong>@Beyond Pure</strong></div>
+  <div class="col"><strong>Beyond Pure</strong></div>
+    </div>
+			
 	  
-	  
-			 </div>
-		</div>
-		
 		
 		
 		
@@ -106,11 +102,10 @@
  A podcast where we encourage you to embrace your own beauty standards.
 			 
 			 </footer>
-</div>
+	</div></div>
 	
 		
-		
-	  
+	
 	
 	
 
