--- a/justification.html
+++ b/justification.html
@@ -64,19 +64,19 @@
 	
 <br>
 			
-			<div class="jumbotron jumbotron2" id="justificationtxt"><br><br>
+			<div class="jumbotron jumbotron2" id="justificationtxt">
 				<div class="jumbotron-3">
 				<div class="row">
     <div class="col" >
       <strong>  </strong> </div>
 					
-    <div class="col-4" id= "col-4">Using testing report
+    <div class="col-4" id= "col-4">Using testing report <br>
     </div>
     <div class="col" id="col5">
       <strong> Number of Test Users: 3 testers <br>
 Type: paper prototype </strong> </div>
-  </div>
-</div><br><br>
+  </div><br>
+</div>
     <div class= "jumbotron-3">
 	<div class="row">
     <div class="col">
