--- a/podcasts.html
+++ b/podcasts.html
@@ -28,7 +28,7 @@
     <title>Beyond Pure Vision</title>
   </head>
 	<body>
-    <div class= "podcasts">
+    <div class= "podcastspage">
 		
 		
 		
@@ -66,47 +66,41 @@
 	  
 	  <br> <br> 
 	<div class="row">
-    <div class="col-sm">
+    <div class="col-sm" id="col-sm">
       <img class="my-card-img-top" src="images/MicrosoftTeams-image.png" alt="Beauty">
     <div class="my-card-body">
-		<p class="my-card-title">The beauty podcast </p>
-        <h5>What means beauty for you? And do you think of the same definition as others?</h5>
+		<p class="my-card-title"><strong><br> The beauty podcast </strong></p>
+        <p id="h5">What means beauty for you? And do you think of the same definition as others?</p>
     </div>
     </div>
 	  
-	  <div class="col-sm">
+	  <div class="col-sm" id="col-sm">
       <img class="my-card-img-top" src="images/pccareer.png" alt="Career">
     <div class="my-card-body">
-		<p class="my-card-title">The career podcast </p> 
-		<h5> How can beaauty influence your career? Do pretty women have a privileged position? </h5>
+		<p class="my-card-title"><strong><br> The career podcast </strong></p>
+<p id="h5"> How can beaauty influence your career? Do pretty women have a privileged position? </p>
 	</div>
     </div>
 	  
-<div class="col-sm">
+<div class="col-sm" id="col-sm">
       <img class="my-card-img-top" src="images/pcdiversity.png" alt="diversity">
     <div class="my-card-body">
-		<p class="my-card-title">The diversity podcast </p> 
-		<h5> Diversity is a hot topic, does this mean that the beauty standards get mixed up? </h5>
+		<p class="my-card-title"><strong><br> The diversity podcast </strong></p>
+<p id="h5">Diversity is a hot topic, does this mean that the beauty standards get mixed up? </p>
 	</div>
     </div>
 		
-<div class="col-sm">
+<div class="col-sm" id="col-sm">
       <img class="my-card-img-top" src="images/pcfriendship.png" alt="friendship">
     <div class="my-card-body">
-		<p class="my-card-title"> The friendship podcast </p> 
-		<h5> What is the influence from friends on our beautystandards?  </h5>
+		<p class="my-card-title"><strong><br> The friendship podcast </strong></p>
+<p id="h5"> What is the influence from friends on our beautystandards?  </p>
 	</div>
     </div>
 	  
 </div>
 		</div></div> <br>
-	  
-	  <div class="row" id="socials">
-  <div class="col"><strong>Beyond Pure</strong></div>
-  <div class="col"><strong>Beyond Pure</strong></div>
-  <div class="col"><strong>@Beyond Pure</strong></div>
-  <div class="col"><strong>Beyond Pure</strong></div>
-    </div>
+	 
 			
 	  
 		
