--- a/values.html
+++ b/values.html
@@ -96,7 +96,7 @@
     <div class="col"> <br><br><img class="values" src="images/selfesteem.png" alt="self-esteem"></div> 
 	  
 
-    <div> <br><br><img class="values" src="images/positiveoutlook.png" alt="positive outlook"></div> 
+    <div class="col"> <br><br> <img class="values" src="images/positiveoutlook.png" alt="positive outlook"></div> 
 
     <div class="col"> <br><br><img class="values" src="images/resepct.png" alt="resepct"> </div> 
 
