--- a/find us.html
+++ b/find us.html
@@ -33,26 +33,35 @@
 		
 		
 		
-		<nav class="navbar navbar-light" style="background-color: #e3f2fd">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html"> 
-		<img alt="logo" src="images/logo.png" height="75"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <img alt="logo" src="images/logo.png" height="75"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"> Vision </a>
+          <a class="nav-link" href="community.html">Community</a>
         </li>
-		  <li class="nav-item">
-          <a class="nav-link" href="#"> Values </a>
+        <li class="nav-item">
+          <a class="nav-link" href="podcasts.html">podcasts</a>
         </li>
-		  <li class="nav-item">
-          <a class="nav-link" href="#">Community</a>
+		   <li class="nav-item">
+          <a class="nav-link" href="find us.html">Find us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            About us
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="vision.html">Vision</a></li>
+            <li><a class="dropdown-item" href="values.html">Values</a></li>
+            <li><a class="dropdown-item" href="justification.html">Justification</a></li>
+          </ul>
         </li>
       </ul>
     </div>
