--- a/community.html
+++ b/community.html
@@ -45,7 +45,7 @@
           <a class="nav-link" href="community.html">Community</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="podcasts.html">podcasts</a>
+          <a class="nav-link" href="podcasts.html">Podcasts</a>
         </li>
 		   <li class="nav-item">
           <a class="nav-link" href="find us.html">Find us</a>
