--- a/justification.html
+++ b/justification.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="community.html">Community</a>
@@ -64,14 +64,14 @@
 	Color codes: Black, Grey, #A57F63, white
 		<br> </p> 
 		  </div></div> <br><br>
+			</div></div>
 			
-			<div class="jumbotron jumbotron-fluid">
   <div class="containerdiagram">
 		<img src="images/flowdiagram.png" id= "flowdiagram" alt= "flow diagram">
 		
-				</div> </div>
+				</div> 
 	
-<br>
+><br>
 			
 			<div class="jumbotron jumbotron2" id="justificationtxt">
 				<div class="jumbotron-3">
