--- a/justification.html
+++ b/justification.html
@@ -65,11 +65,12 @@
 		<br> </p> 
 		  </div></div> <br><br>
 			</div></div>
-			
+	
+<div class="diagram">
   <div class="containerdiagram">
 		<img src="images/flowdiagram.png" id= "flowdiagram" alt= "flow diagram">
 		
-				</div> 
+	</div> </div>
 	
 ><br>
 			
