--- a/justification.html
+++ b/justification.html
@@ -66,13 +66,13 @@
 		  </div></div> <br><br>
 			</div></div>
 	
-<div class="diagram">
+ <div class="jumbotron jumbotron-fluid">
   <div class="containerdiagram">
 		<img src="images/flowdiagram.png" id= "flowdiagram" alt= "flow diagram">
 		
-	</div> </div>
+	 </div> </div>
 	
-><br>
+<br>
 			
 			<div class="jumbotron jumbotron2" id="justificationtxt">
 				<div class="jumbotron-3">
