--- a/justification.html
+++ b/justification.html
@@ -65,13 +65,18 @@
 		<br> </p> 
 		  </div></div> <br><br>
 			</div></div>
-	
- <div class="jumbotron jumbotron-fluid">
-  <div class="containerdiagram">
-		<img src="images/flowdiagram.png" id= "flowdiagram" alt= "flow diagram">
-		
-	 </div> </div>
-	
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-img">
+      <img src="images/flowdiagram.png" alt= "flow diagram" class="flowdiagram" id= "flowdiagram">
+    </div>
+    <div class="col">
+    </div>
+  </div>
+
 <br>
 			
 			<div class="jumbotron jumbotron2" id="justificationtxt">
