--- a/podcasts.html
+++ b/podcasts.html
@@ -163,9 +163,9 @@
       </p>
     </section>
  
-    <section class="">
+    <section class="col-3">
       <div class="row">
-        <div class="col-sm9">
+        <div class="col-3">
           <h5 class="text-uppercase">Socials</h5>
               <a href="#!" class="text-white">Spotify</a>
            
